--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
-  font-family: 'Oxygen', sans-serif;
+  font-family: 'Karla', sans-serif;
   font-size: 22px;
+  line-height: 160%;
   background-color: #204056;
   color: white;
   letter-spacing: 0.05rem;
@@ -18,7 +19,7 @@ body {
 }
 
 .code {
-  font-family: monospace;
+  font-family: "Inconsolata", "Consolas", "Lucida Console", monospace;
   background-color: #336180;
   padding: 0.25rem 0.75rem;
   font-size: 1.375rem;
@@ -26,7 +27,7 @@ body {
 }
 
 .code-block {
-  font-family: monaco, Consolas, "Lucida Console", monospace;
+  font-family: "Inconsolata", "Consolas", "Lucida Console", monospace;
   background-color: #336180;
   padding: 0.5em 0.75em;
   font-size: 1.15rem;
@@ -35,12 +36,12 @@ body {
   margin: 1rem 0;
 }
 
-.tip-number {
+.title {
   margin: auto;
   margin-bottom: 2.5rem;
   color: #CCCCCC;
   text-transform: uppercase;
-  letter-spacing: 0.1rem;
+  letter-spacing: 0.12rem;
   font-weight: bolder;
   font-size: 1rem;
 }
@@ -61,9 +62,19 @@ body {
   font-size: 1rem;
   margin-top: 2.5rem;
   cursor: pointer;
-  font-weight: bolder;
   border: none;
   color: white;
+  border-radius: 2px;
+  letter-spacing: 0.5px;
+}
+
+.tip-limit-count {
+  padding-left: 1rem;
+  color: #CCCCCC;
+  text-transform: uppercase;
+  letter-spacing: 0.12rem;
+  font-weight: bolder;
+  font-size: 0.8rem;
 }
 
 .disabled {
